# scooter-price

./: .gitignore  pyproject.toml  requirements.txt  scooter.ipynb  scooter_Version1.ipynb  solver.py  submission  submission_blend_strict.csv  submission_xgb.csv  submission_xgb_only.csv
catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
catboost_info/test/: events.out.tfevents
catboost_info/tmp/: cat_feature_index.6903293e-ba79e118-1116e539-41fbda1d.tmp  cat_feature_index.913bc30a-72b0cd68-f822254e-939626d8.tmp
data/: sample_submission.csv  test.csv  train.csv
